2001-09-18  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Cookie.py (make_sender_cookie): Support variable length HMACs
	via HMAC_BYTES.

	(confirmationmac): Ditto.

	(datemac): Ditto.

	* Defaults.py (HMAC_BYTES): New variable specifying the number of
	bytes for all HMACs.

2001-09-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (TMDA_VERSION): Begin 0.37 development.

2001-09-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (REVOKED_FILE): New variable pointing to the file
	which contains "revoked" recipient addresses.

	(BOUNCE_REVOKED_CC): New variable specifying the address to CC
	"revoked" bounces.

2001-09-12  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (TMDA_VERSION): Begin 0.36 development.

2001-09-10  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (WHITELIST_TO_BARE): Turn on by default.

2001-09-05  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (WHITELIST_AUTO_APPEND): New variable to toggle
	whether tmda-filter should automatically append a confirming
	sender's address to the WHITELIST.

	* Util.py (append_to_file): New function which appends a string to
	a textfile.
	
2001-09-04  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (CONFIRM_MAX_MESSAGE_SIZE): New variable that
	specifies the maximum size the a message can be before its body is
	excluded from the confirmation request/acceptance notices.

	(CONFIRM_MAX_MESSAGE_SIZE): Change default to 50000 bytes.

2001-09-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (TMDA_HOMEPAGE): Use sf.net instead of
	sourceforge.net (shorter alias).

2001-08-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (TMDA_VERSION): Begin 0.35 development.

2001-08-28  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (TMDA_VERSION): Begin 0.34 development.
