@@ -1,3 +1,8 @@
+2001-09-19  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* Defaults.py (GLOBAL_TMDARC): Add a global configuration file
+	(/etc/tmdarc) that is read first before ~/.tmdarc.  
+
 2001-09-18  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* Cookie.py (make_sender_cookie): Support variable length HMACs
